# rust-wasm-ci

./: Cargo.toml  README.md  build.sh  publish.sh
src/: lib.rs
